--- a/student/Student.vbproj
+++ b/student/Student.vbproj
@@ -93,6 +93,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adminform.Designer.vb">
+      <DependentUpon>Adminform.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Adminform.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AdminLogin.Designer.vb">
       <DependentUpon>AdminLogin.vb</DependentUpon>
     </Compile>
@@ -100,7 +106,25 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="EnterMarks.Designer.vb">
+      <DependentUpon>EnterMarks.vb</DependentUpon>
+    </Compile>
+    <Compile Include="EnterMarks.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home.Designer.vb">
+      <DependentUpon>Home.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Home.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SqlControl.vb" />
+    <Compile Include="StudentDetails.Designer.vb">
+      <DependentUpon>StudentDetails.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StudentDetails.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="StudentLogin.Designer.vb">
       <DependentUpon>StudentLogin.vb</DependentUpon>
     </Compile>
@@ -122,10 +146,37 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Teacherform.Designer.vb">
+      <DependentUpon>Teacherform.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Teacherform.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeacherLogin.Designer.vb">
+      <DependentUpon>TeacherLogin.vb</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherLogin.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="updateStudent.Designer.vb">
+      <DependentUpon>updateStudent.vb</DependentUpon>
+    </Compile>
+    <Compile Include="updateStudent.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Adminform.resx">
+      <DependentUpon>Adminform.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminLogin.resx">
       <DependentUpon>AdminLogin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home.resx">
+      <DependentUpon>Home.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentDetails.resx">
+      <DependentUpon>StudentDetails.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StudentLogin.resx">
       <DependentUpon>StudentLogin.vb</DependentUpon>
@@ -135,6 +186,15 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Teacherform.resx">
+      <DependentUpon>Teacherform.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherLogin.resx">
+      <DependentUpon>TeacherLogin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="updateStudent.resx">
+      <DependentUpon>updateStudent.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
